docs-archive/apache-airflow-providers-slack/9.11.0/_sources/_api/airflow/providers/slack/transfers/base_sql_to_slack/index.rst.txt
airflow.providers.slack.transfers.base_sql_to_slack
===================================================

.. py:module:: airflow.providers.slack.transfers.base_sql_to_slack


Classes
-------

.. autoapisummary::

   airflow.providers.slack.transfers.base_sql_to_slack.BaseSqlToSlackOperator


Module Contents
---------------

.. py:class:: BaseSqlToSlackOperator(*, sql, sql_conn_id, sql_hook_params = None, parameters = None, slack_proxy = None, slack_timeout = None, slack_retry_handlers = None, **kwargs)

   Bases: :py:obj:`airflow.providers.common.compat.sdk.BaseOperator`


   Operator implements base sql methods for SQL to Slack Transfer operators.

   :param sql: The SQL query to be executed
   :param sql_conn_id: reference to a specific DB-API Connection.
   :param sql_hook_params: Extra config params to be passed to the underlying hook.
       Should match the desired hook constructor params.
   :param parameters: The parameters to pass to the SQL query.
   :param slack_proxy: Proxy to make the Slack Incoming Webhook / API calls. Optional
   :param slack_timeout: The maximum number of seconds the client will wait to connect
       and receive a response from Slack. Optional
   :param slack_retry_handlers: List of handlers to customize retry logic. Optional


   .. py:attribute:: template_fields
      :type:  collections.abc.Sequence[str]
      :value: ('sql_conn_id',)



   .. py:attribute:: sql_conn_id


   .. py:attribute:: sql_hook_params
      :value: None



   .. py:attribute:: sql


   .. py:attribute:: parameters
      :value: None



   .. py:attribute:: slack_proxy
      :value: None



   .. py:attribute:: slack_timeout
      :value: None



   .. py:attribute:: slack_retry_handlers
      :value: None



